@@ -2877,3 +2877,8 @@ Otherwise, I'll do it myself tomorrow.
 
 _______________________________________________
 
+Wed Apr 26 19:58:05 PDT 2000
+(KainX)
+
+If progress() returns 0, clip the last row and
+return 2.
